# lexophile

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  setup.sh  start_server.sh
gather_word_data/: README.md  lexophile.json  lexophile.py  pyproject.toml  word_list_main.txt
lexophile_trmnl_plugin/: README.md  full.liquid  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid
